# mycodepractice

./: README.md
Hackerrank Cpp Codes/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  7.cpp  8.cpp  9.cpp
bootcamp/: Bootcamp.cpp
c_questions/: cquestions.txt
cpp/: a.out  capturelist_lambda.cpp  explambda.cpp  lambda.cpp  list.cpp  list2.cpp  lvalue_rvalue.cpp  map.cpp  map2.cpp  proio_queue.cpp  sort.c
cpp new/: a.out  bind.cpp  clock.cpp  const.cpp  const_constructor.cpp  const_fun.cpp  constexpr.cpp  delete.cpp  delete_in_constructor.cpp  demo.cpp  diamond_problem.cpp  dtor.cpp  empty_strcture.cpp  factory.cpp  free_in_c.c  function_pointer_with_static_file1.c  function_pointer_with_static_file2.c  hellocpp.cpp  int_to_string.cpp  limits.cpp  new.cpp  not_a_number.cpp  ostream.cpp  recursive_dir.cpp  singleton.cpp  static_assert.cpp  string_to_int_long_long.cpp  string_vector.cpp  thread_2.c  thread_5.c  unique.cpp
download manager/: client.c
download manager IPC project/: client.c
download manager ipc project/: server_with_array_thread.c
download_manager/: file_client.c  file_server.c
download_manager_ipc_project/: server.c
fifo/: receiver_server_full.c  receiver_server_half.c  receiver_server_simplex.c  sender_client_full.c  sender_client_half.c  sender_client_simplex.c
ipc socket with multiple clients/: client.c  (+3 more)
server_client_Bootcamp/: BootcampClient.cpp  BootcampClient.h  BootcampClientDaemon.cpp  BootcampServer.cpp  BootcampServer.h  BootcampServerDaemon.cpp  CMakeLists.txt
(+163 files in other folders)
